32 реализовать добавление категории (#40)
* Реализован метод POST /categories
для добавления категории(доходов/расходов) в свой аккаунт

* добавлены компонентные тесты:

201 - удачное создание категории (с проверкой маппинга у сохраненной сущности)
400 - передано значение name = null
400 - передано значение Type не из перечня
401 - попытка вызова неаутентифицированным пользователем

* Добавлена ручка /categories POST только для пользователей с ролью USER в SecurityConfig

* Удалено лишнее DTO и внесены соответствующие изменения в CategoriesController и CategoryService

* Убрал лишнее

* Еще было лишнее

* В CategoryService прямое указание типов заменил на var. В CategoryRepository удалил не используемый метод.

* Убрал лишние импорты

* json для компонентных тестов вынесен в отдельные файлы. Добавлен Enum CategoryJson и изменен CategoriesComponentTest

* Убран Java doc из CategoryJson и аннотация @Transactional в CategoriesComponentTest добавлена в импорты

* Добавлен класс AuthenticatedComponentTestBase с методом ensureTestUser. Класс AccountsComponentTest унаследован от AuthenticatedComponentTestBase. Исправлен CategoriesComponentTest

* Убраны не используемые импорты

* var Заменены на явное указание типов

* Убран лишний комментароий в CategoryService
